<resources>
    <string name="app_name">SaveBlue</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="add_account">Add Account</string>
    <!--<string name="add_account">Settings</string>-->

    <string name="menu_overview">Overview</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <string name="accountTitle">AccountTitle</string>
    <string name="accountBalance">accountBalance</string>
    <string name="title_activity_dashboard2">DashboardActivity</string>
    <string name="title_activity_account_details">AccountDetailsActivity</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Expenses</string>
    <string name="tab_text_3">Incomes</string>

    <string name="serverMessage">Can\'t connect to server :(</string>
    <string name="serverErrorMessage">Request Error :(</string>
    <string name="logoutMessage0">Logged out</string>
    <string name="logoutMessage1">Logged out because security token expired</string>

    <!-- login activity strings -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retypePassword">Retype password</string>
    <string name="register">Register</string>
    <string name="fieldError">Required Field!</string>
    <string name="matchError">Passwords don\'t Match!</string>
    <string name="emailError">Email should follow form: x@y.z!</string>
    <string name="registerUsernameError">Username already taken!</string>
    <string name="registerEmailError">Email already taken!</string>
    <string name="loginMessage">Wrong username or password</string>
    <string name="registerErrorMessage">Error registering :(</string>
    <string name="registerMessage">Account registered :D</string>

    <string name="updateProfile">Update Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="updateUserErrorMessage">Couldn\'t update User data :(</string>
    <string name="updateUserMessage">"User data updated"</string>

    <string name="descriptionExpense">Expense description</string>
    <string name="descriptionIncome">Income description</string>
    <string name="accountText">Account:</string>

    <!-- add/edit expense activity -->
    <string name="addExpenseTitle">Add Expense</string>
    <string name="editExpenseTitle">Edit Expense</string>
    <string name="updateExpenseText">Update Expense</string>
    <string name="datePickerTitle">Select Date</string>

    <!-- add/edit income activity -->
    <string name="addIncomeTitle">Add Income</string>
    <string name="editIncomeTitle">Edit Income</string>
    <string name="updateIncomeText">Update Income</string>

    <!-- delete acc dialog -->
    <string name="deleteDialogTitle">Delete Account?</string>
    <string name="deleteDialogMessage">Delete the account and all its content?</string>
    <string name="deleteDialogYes">Yes</string>
    <string name="deleteDialogNo">No</string>
    <string name="start_of_month">Start of Month</string>
    <string name="start_of_month_text">Start of Month:</string>
    <string name="available_balance">Available Balance</string>

    <!-- add acc dialog -->
    <string name="addAccDialogTitle">Create Account</string>
    <string name="incomeDeleted">Income Deleted</string>
    <string name="incomeUpdated">Income Updated</string>
    <string name="incomeAdded">Income Added</string>
    <string name="selectDateIncome">Select Date of Income</string>
    <string name="editProfile">Edit Profile</string>
    <string name="expenseDeleted">Expense Deleted</string>
    <string name="expenseUpdated">Expense Updated</string>
    <string name="expenseAdded">Expense Added</string>
    <string name="selectDateExpense">Select Date of Expense</string>
    <string name="delete">Delete</string>
    <string name="add_expense">Add Expense</string>
    <string name="required_selection">Required selection!</string>
    <string name="categories">Categories</string>
    <string name="amount">Amount</string>
    <string name="date">Date:</string>
    <string name="add_income">Add Income</string>
    <string name="account_name">Account Name</string>
    <string name="update_account">Update Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="dateiconimage">Date Icon Image</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="change_password">Change Password</string>
    <string name="saveblue_launcher_icon">SaveBlue Launcher Icon</string>
    <string name="account_icon_image">Account Icon Image</string>
    <string name="total_balance_placeholder">100000.00€</string>
    <string name="add_account_icon_image">Add Account Icon Image</string>
    <string name="add_income_floating_action_button">Add Income Floating Action Button</string>
    <string name="add_expense_floating_action_button">Add Expense Floating Action Button</string>
    <string name="add_income_or_expense_floating_action_button">Add Income or Expense Floating Action Button</string>
    <string name="euro_symbol">Euro symbol</string>
    <string name="total_balance">(Total Balance)</string>
    <string name="startOfMonthPlaceholder">1</string>
    <string name="no_expenses_yet">No expenses yet</string>
    <string name="no_incomes_yet">No Incomes yet</string>
    <string name="profile_picture">Profile picture</string>
    <string name="username_placeholder">USERNAME</string>
    <string name="email_placeholder">EMAIL</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="profile_info">Profile Info</string>
    <string name="edit">Edit</string>
    <string name="expand_card_arrow">Expand card arrow</string>
    <string name="expense_income_placeholder">Expense/Income</string>
    <string name="category2_placeholder">Category2</string>
    <string name="description">Description</string>


    <!-- categories string arrays -->
    <string-array name="categoriesI1">
        <item>Primary Category</item>
        <item>Salary &amp; Wage</item>
        <item>Assets</item>
        <item>Student Work</item>
        <item>Funds Transfer</item>
        <item>Other</item>
    </string-array>

    <string-array name="categoriesE1">
        <item>Primary Category</item>
        <item>Personal</item>
        <item>Food &amp; Drinks</item>
        <item>Home &amp; Utilities</item>
        <item>Transport</item>
        <item>Leisure</item>
        <item>Health</item>
        <item>Finance</item>
    </string-array>

    <string-array name="categoriesE2">
        <item>Select primary category first!</item>
    </string-array>

    <string-array name="categoriesE21">
        <item>Personal Hygiene</item>
        <item>Personal Care Services</item>
        <item>Clothing &amp; Footwear</item>
        <item>Consumer Electronics</item>
        <item>Subscriptions</item>
        <item>Education</item>
    </string-array>

    <string-array name="categoriesE22">
        <item>Groceries</item>
        <item>Restaurants</item>
        <item>Alcohol</item>
        <item>Coffee &amp; Tea</item>
    </string-array>

    <string-array name="categoriesE23">
        <item>Household Goods</item>
        <item>Bills</item>
        <item>Maintenance</item>
        <item>Rent</item>
    </string-array>

    <string-array name="categoriesE24">
        <item>Personal vehicle</item>
        <item>Gas</item>
        <item>Parking</item>
        <item>Public transport</item>
        <item>Tolls</item>
        <item>Taxi</item>
    </string-array>

    <string-array name="categoriesE25">
        <item>Sport</item>
        <item>Entertainment</item>
        <item>Culture</item>
        <item>Holidays</item>
    </string-array>

    <string-array name="categoriesE26">
        <item>Medicine &amp; supplements</item>
        <item>Medical services &amp; diagnostics</item>
    </string-array>

    <string-array name="categoriesE27">
        <item>Insurance</item>
        <item>Taxes</item>
        <item>Debts</item>
        <item>Funds Transfer</item>
    </string-array>

</resources>